Mudando o tamanho do parágrafo de card

--- a/style.css
+++ b/style.css
@@ -985,6 +985,11 @@ input[type="radio"]{
       /* margin: 20px 0 10px 0; */
       font-size: 1.5rem;
     }
+
+    .pmain-card-slide .pcards-slide .pcard-slide .card-projeto p{
+      /* margin: 20px 0 10px 0; */
+      font-size: 1.0rem;
+    }
   }
 
   @media (max-width: 460px) {
