--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root {
     --C_PBlue:  #3a9cbd;
     --C_SBlue:  #74ceec;
-    --C_Fundo: #fff;
+    --C_Fundo: #000;
     --C_Black: #000;
     --C_White: #fff;
 }
