--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ html {
 }
 
 body {
-    background: lightblue url("imagens/fundoProjeto.jpg") no-repeat fixed center; 
+    background: lightblue url("https://github.com/NatyBernini/siteInstituto/blob/main/imagens/fundoProjeto.jpg?raw=true") no-repeat fixed center ; 
 }
 
 
 /* Cabeçalho, seções e rodapé */
-header, .hero-section, .courses-section, footer, .phero-section, .hero-section-eventos, .estrutura-section{ /* Criar a linha em volta*/
+header, .hero-section, .courses-section, footer, .phero-section, .hero-section-eventos { /* Criar a linha em volta*/
     border-color: var(--C_Black);
     border-style: solid;
     border-width: 0 1px 1px 1px;
@@ -44,6 +44,7 @@ header, .hero-section, .courses-section, footer, .phero-section, .hero-section-e
 /* Cabeçalho */
 
 header img {
+    width: 10rem;
     display: block;
     margin: 1rem auto;
 }
@@ -233,9 +234,19 @@ sub {
 /* Rodapé */ 
 
 /*Redes sociais*/
-.navbar {
-    display: flex;
+#contato .navbar {
+    display: block;
     gap: 2rem;
+}
+
+#contato .icon {
+    margin-bottom: 1rem;
+    width: 2.50rem;
+}
+
+.navbar {
+  display: flex;
+  gap: 2rem;
 }
 
 .icon {
@@ -895,54 +906,6 @@ background: var(--C_White);
 
 /* Fim Projeto 3 */
 
-/* Estrutura */
-#oneE:checked ~ .pbutton .oneE{
-  width: 35px;
-  background: var(--C_PBlue);
-}
-
-#oneE:checked ~ .pbutton .twoE{
-  width: 15px;
-  background: var(--C_White);
-}
-
-#oneE:checked ~ .pbutton .threeE{
-  width: 15px;
-  background: var(--C_White);
-}
-
-#twoE:checked ~ .pbutton .oneE{
-  width: 15px;
-  background: var(--C_White);
-}
-
-#twoE:checked ~ .pbutton .twoE{
-  width: 35px;
-  background: var(--C_PBlue);
-} 
-
-#twoE:checked ~ .pbutton .threeE{
-width: 15px;
-background: var(--C_White);
-}
-
-#threeE:checked ~ .pbutton .oneE{
-width: 15px;
-background: var(--C_White);
-}
-
-#threeE:checked ~ .pbutton .threeE{
-width: 35px;
-background: var(--C_PBlue);
-} 
-
-#threeE:checked ~ .pbutton .twoE{
-width: 15px;
-background: var(--C_White);
-}
-/* Fim Estrutura */
-
-
 input[type="radio"]{
     display: none;
   }
@@ -960,6 +923,14 @@ input[type="radio"]{
   .pmain-card .pcards .pcard{
     /* margin: 20px 0 10px 0; */
     width: 100%;
+  }
+
+  .navbar {
+    justify-content: center;
+  }
+  .about-column img{
+    width: 100%;
+    justify-content: center;
   }
 }
 
@@ -990,6 +961,12 @@ input[type="radio"]{
       /* margin: 20px 0 10px 0; */
       font-size: 1.0rem;
     }
+
+    
+  }
+
+  @media (max-width: 370px) {
+    
   }
 
 
@@ -1172,7 +1149,7 @@ input[type="radio"]{
 }
 .main-cardEventos .cardsEventos .cardEventos{
   width: calc(100% / 3 - 10px);
-  background: #fff;
+  background: var(--C_Fundo);
   border-radius: 12px;
   padding: 30px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
@@ -1310,8 +1287,4 @@ input[type="radio"]{
 
 .dataEvento {
   height: 10%;
-}
-
-.estrutura-section {
-  text-align: center;
 }
